Bug 1335203 - Synchronize rust debug-assertions with C++ DEBUG, r=froydnj

MozReview-Commit-ID: JPD9eNFg89S